--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,3 +13,14 @@ services:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=docker
       - POSTGRES_DB=devtraining
+
+  dbtest:
+    image: postgres:latest
+    container_name: test-db
+    restart: always
+    ports:
+      - '5433:5432'
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=docker
+      - POSTGRES_DB=devtraining
